<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.pjezi.clickertemplate.AboutActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/AppTheme.Toolbar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">


        <TextView
            android:id="@+id/title_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/about_title"
            android:textColor="@color/toolbarText"
            android:textSize="18sp" />


    </android.support.v7.widget.Toolbar>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp">

        <TextView
            android:id="@+id/about_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/about_textview"
            android:textSize="18sp"/>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:divider="?android:dividerHorizontal"
            android:showDividers="middle">

            <TextView
                android:id="@+id/developer_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_gravity="center"
                android:text="@string/developer"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/playstore_image"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/play_store"/>

                <TextView
                    android:id="@+id/playstore_textview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="8dp"
                    android:layout_gravity="center_vertical"
                    android:text="Google Play"
                    android:textSize="18sp"
                    tools:ignore="HardcodedText" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/twitter_image"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/twitter_logo"/>

                <TextView
                    android:id="@+id/twitter_textview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="8dp"
                    android:layout_gravity="center_vertical"
                    android:text="Twitter"
                    android:textSize="18sp"
                    tools:ignore="HardcodedText" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/googleplus_image"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/google_plus"/>

                <TextView
                    android:id="@+id/googleplus_textview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="8dp"
                    android:layout_gravity="center_vertical"
                    android:text="Google+"
                    android:textSize="18sp"
                    tools:ignore="HardcodedText" />

            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:divider="?android:dividerHorizontal"
            android:showDividers="middle">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_gravity="center"
                android:text="@string/translate_help"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/translate_image"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/translate"/>

                <TextView
                    android:id="@+id/translate_textview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="8dp"
                    android:layout_gravity="center_vertical"
                    android:text="@string/translate_button"
                    android:textSize="18sp" />

            </LinearLayout>


        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>